Define values for zodb-cache-size and zeo-client-cache-size

--- a/port.cfg
+++ b/port.cfg
@@ -26,3 +26,5 @@ plone-path = Plone
 cluster = pm40
 oo-port = 2002
 python-uno = /usr/bin/python3
+zodb-cache-size = 50000
+zeo-client-cache-size = 600MB
