--- a/zeo.cfg
+++ b/zeo.cfg
@@ -37,8 +37,9 @@ zeo-conf-additional =
 recipe = plone.recipe.zope2instance
 zeo-client = true
 zeo-address = ${zeoserver:zeo-address}
-zodb-cache-size = 50000
-zeo-client-cache-size = 600MB
+zodb-cache-size = ${port:zodb-cache-size}
+zeo-client-cache-size = ${port:zeo-client-cache-size}
+
 shared-blob = on
 zope-conf-additional +=
   <product-config five.z2monitor>
