Include imio.zamqp.pm to instance1 when amqp.cfg is enabled

--- a/amqp.cfg
+++ b/amqp.cfg
@@ -12,10 +12,16 @@ auto-checkout +=
 [omelette]
 eggs += ${instance-amqp:eggs}
 
+[instance1]
+eggs +=
+    imio.zamqp.pm
+zcml +=
+    imio.zamqp.pm
+
 [instance-amqp]
 <= instance1
 zserver-threads = 1
-eggs =
+eggs +=
     ${instance1:eggs}
     imio.zamqp.pm
 
