Use collective.messagesviewlet = 0.12

--- a/base.cfg
+++ b/base.cfg
@@ -77,10 +77,15 @@ zserver-threads = 4
 debug-mode = off
 verbose-security = off
 zope-conf-additional =
-  %define FILESTORAGE ${buildout:directory}/var/filestorage
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add.conf
-  ${zope-conf:zamqp}
+    %define FILESTORAGE ${buildout:directory}/var/filestorage
+    %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
+    %include ${buildout:directory}/zope_add.conf
+    ${zope-conf:zamqp}
+    <product-config collective.fingerpointing>
+        audit-log ${buildout:directory}/var/log/audit.log
+        audit-log-max-size 10240
+        audit-log-old-files 30
+    </product-config>
 
 environment-vars =
   PYTHON_EGG_CACHE ${buildout:directory}/python-eggs
