--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -15,10 +15,11 @@ collective.compoundcriterion = 0.3
 collective.documentgenerator = 2.0.8
 collective.eeafaceted.collectionwidget = 0.6
 collective.eeafaceted.z3ctable = 1.0.2
+collective.fingerpointing = 1.4b1
 collective.js.fancytree = 2.20.0.0
 collective.js.iframeresizer = 0.3
 collective.iconifieddocumentactions = 1.3.2
-collective.messagesviewlet = 0.11
+collective.messagesviewlet = 0.12
 communesplone.layout = 4.3.8.1
 imio.annex = 1.5
 imio.actionspanel = 1.28
