--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -59,6 +59,7 @@ z3c.table = 1.0.0
 #Required by:
 #collective.documentgenerator
 collective.excelexport = 1.2
+phonenumbers = 8.8.3
 xlwt = 1.0.0
 
 #Required by:
