Get certifi = 2017.11.5, required by collective.zamqp 0.16.0

--- a/versions-amqp.cfg
+++ b/versions-amqp.cfg
@@ -5,3 +5,6 @@ collective.zamqp = 0.16.0
 reportlab = 3.4.0
 pyPdf = 1.13
 pip = 9.0.1
+
+# Required by collective.zamqp 0.16.0
+certifi = 2017.11.5
