--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -54,13 +54,14 @@ Products.ZCatalog = 3.1
 
 #Required by:
 #collective.eeafaceted.z3ctable
-z3c.table = 1.0.0
+z3c.table = 2.0.1
 
 #Required by:
 #collective.documentgenerator
 collective.excelexport = 1.2
 phonenumbers = 8.8.3
-xlwt = 1.0.0
+xlwt = 1.3.0
+future = 0.16.0
 
 #Required by:
 #collective.eeafaceted.collectionwidget
