Use imio.zamqp.core = 0.2, imio.zamqp.pm = 0.1

--- a/versions-amqp.cfg
+++ b/versions-amqp.cfg
@@ -2,6 +2,8 @@
 requests = 2.18.4
 imio.dataexchange.core = 0.2
 collective.zamqp = 0.16.0
+imio.zamqp.core = 0.2
+imio.zamqp.pm = 0.1
 reportlab = 3.4.0
 pyPdf = 1.13
 pip = 9.0.1
