Do not auto-checkout imio.zamqp.* packages by default

--- a/amqp.cfg
+++ b/amqp.cfg
@@ -5,9 +5,9 @@ extends =
 parts +=
     instance-amqp
 
-auto-checkout +=
-    imio.zamqp.core
-    imio.zamqp.pm
+auto-checkout =
+#    imio.zamqp.core
+#    imio.zamqp.pm
 
 [omelette]
 eggs += ${instance-amqp:eggs}
