--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -15,7 +15,7 @@ collective.compoundcriterion = 0.3
 collective.documentgenerator = 3.0.3
 collective.eeafaceted.collectionwidget = 0.6
 collective.eeafaceted.z3ctable = 1.0.2
-collective.fingerpointing = 1.4b1
+collective.fingerpointing = 1.5rc1
 collective.js.fancytree = 2.20.0.0
 collective.js.iframeresizer = 0.3
 collective.iconifieddocumentactions = 1.3.2
