Use zc.lockfile = 1.2.1, file-read-backwards = 1.2.2, required by collective.fingerpointing >= 1.5rc1

--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -138,3 +138,8 @@ ipython = 3.2.3
 collective.upgrade = 1.2
 zodbupdate = 0.5
 
+# Required by:
+# collective.fingerpointing
+zc.lockfile = 1.2.1
+file-read-backwards = 1.2.2
+
