Completed amqp prod config

--- a/amqp.cfg
+++ b/amqp.cfg
@@ -33,6 +33,8 @@ zope-conf-additional =
   </product-config>
   %define FILESTORAGE ${buildout:directory}/var/filestorage
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add.conf
+  %define ZEOADDRESS ${zeoserver:zeo-address}
+  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
+  %include ${buildout:directory}/zope_add_zeo.conf
   ${zope-conf:amqp}
   ${zope-conf:zamqp}
