Include zamqp in every instance config

--- a/zeo.cfg
+++ b/zeo.cfg
@@ -91,6 +91,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance3]
 <= instance1
@@ -103,6 +104,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance4]
 <= instance1
@@ -115,6 +117,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance5]
 <= instance1
@@ -127,6 +130,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance6]
 <= instance1
@@ -139,6 +143,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance7]
 <= instance1
@@ -151,6 +156,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance8]
 <= instance1
@@ -163,6 +169,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 
 [instance-debug]
 <= instance1
@@ -177,6 +184,7 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
 eggs =
     ${instance1:eggs}
     ${debug:eggs}
@@ -203,3 +211,4 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  ${zope-conf:zamqp}
