Default values for instance-amqp-http and instance-amqp-monitor

--- a/port.cfg
+++ b/port.cfg
@@ -11,6 +11,8 @@ instance-debug-http = 8080
 instance-debug-monitor = 8888
 instance-async-http = 8089
 instance-async-monitor = 8090
+instance-amqp-http = 8286
+instance-amqp-monitor = 8285
 zeo = 8100
 zeo-monitor = 8101
 instance1-monitor = 8181
