--- a/versions-amqp.cfg
+++ b/versions-amqp.cfg
@@ -1,11 +1,11 @@
 [versions]
 requests = 2.18.4
 imio.dataexchange.core = 0.2
-collective.zamqp = 0.16.0
-imio.zamqp.core = 0.2
-imio.zamqp.pm = 0.3
+collective.zamqp = 0.16.1
+imio.zamqp.core = 0.3
+imio.zamqp.pm = 0.4
 reportlab = 3.4.0
-pyPdf = 1.13
+PyPDF2 = 1.26.0
 pip = 9.0.1
 
 # Required by collective.zamqp 0.16.0
