--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -8,7 +8,7 @@ mr.developer = 1.34
 # Products.PloneMeeting
 appy = 0.9.9
 beautifulsoup4 = 4.5.3
-natsort = 5.0.3
+natsort = 5.1.1
 collective.behavior.talcondition = 0.7
 collective.ckeditor = 4.6.0
 collective.compoundcriterion = 0.3
@@ -20,6 +20,7 @@ collective.js.fancytree = 2.20.0.0
 collective.js.iframeresizer = 0.3
 collective.iconifieddocumentactions = 1.3.2
 collective.messagesviewlet = 0.12
+collective.usernamelogger = 1.4
 communesplone.layout = 4.3.8.1
 imio.annex = 1.8
 imio.actionspanel = 1.30
@@ -31,7 +32,7 @@ imio.prettylink = 1.9
 plonetheme.imioapps = 2.0.14
 Products.CPUtils = 1.13
 Products.PasswordStrength = 0.4
-collective.usernamelogger = 1.4
+simplejson = 3.13.2
 
 #Required by:
 #imio.annex
@@ -86,7 +87,7 @@ skimpyGimpy = 1.4
 # collective.ckeditor 4.4.5
 demjson = 2.2.4
 collective.plonefinder = 1.2.3
-collective.quickupload = 1.10.0
+collective.quickupload = 1.11.0
 ua-parser = 0.7.3
 
 # Required by:
