Use plone.app.versioningbehavior = 1.3.1

--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -29,6 +29,7 @@ imio.migrator = 1.6
 imio.helpers = 0.10
 imio.history = 1.13
 imio.prettylink = 1.9
+plone.app.versioningbehavior = 1.3.1
 plonetheme.imioapps = 2.0.14
 Products.CPUtils = 1.13
 Products.PasswordStrength = 0.4
