imio.pm.locales was moved from SVN to github

--- a/sources.cfg
+++ b/sources.cfg
@@ -12,7 +12,7 @@ zopesvn = svn://svn.zope.org/repos/main/
 [sources]
 appy = svn http://svn.communesplone.org/svn/communesplone/appy/trunk
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/tags/433
-imio.pm.locales = svn http://svn.communesplone.org/svn/communesplone/imio.pm.locales/tags/4.0
+imio.pm.locales = git git@github.com:IMIO/imio.pm.locales.git
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/tags/4.0
 imio.zamqp.core = git git@github.com:IMIO/imio.zamqp.core.git
 imio.zamqp.pm = git git@github.com:IMIO/imio.zamqp.pm.git
