imio.pm.locales was moved from SVN to github

--- a/dev.cfg
+++ b/dev.cfg
@@ -17,7 +17,7 @@ auto-checkout +=
 always-accept-server-certificate = true
 
 [sources]
-imio.pm.locales = svn http://svn.communesplone.org/svn/communesplone/imio.pm.locales/trunk
+imio.pm.locales = git git@github.com:IMIO/imio.pm.locales.git
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps pushurl=${remotes:imio_push}/plonetheme.imioapps
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/trunk
 
