--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -29,6 +29,7 @@ imio.dashboard = 1.2
 imio.migrator = 1.6
 imio.helpers = 0.11
 imio.history = 1.17
+imio.pm.locales = 4.1b6
 imio.prettylink = 1.9
 plone.app.versioningbehavior = 1.3.1
 plonetheme.imioapps = 2.0.16
