Added imio.pm.locales to auto-checkout by default

--- a/dev.cfg
+++ b/dev.cfg
@@ -11,6 +11,7 @@ parts +=
     code-analysis
 
 auto-checkout +=
+    imio.pm.locales
     plonetheme.imioapps
 
 # do mr.developer not fail with invalid subversion https certificates
