--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -6,16 +6,16 @@ mr.developer = 1.34
 
 # Required by:
 # Products.PloneMeeting
-appy = 0.9.11
+appy = 0.9.12
 beautifulsoup4 = 4.5.3
-natsort = 5.1.1
+natsort = 5.3.0
 collective.behavior.talcondition = 0.7
 collective.ckeditor = 4.7.2
 collective.compoundcriterion = 0.3
-collective.documentgenerator = 3.0.3
-collective.eeafaceted.collectionwidget = 0.6
-collective.eeafaceted.z3ctable = 1.0.2
-collective.fingerpointing = 1.5rc1
+collective.documentgenerator = 3.1
+collective.eeafaceted.collectionwidget = 0.7
+collective.eeafaceted.z3ctable = 1.0.3
+collective.fingerpointing = 1.7
 collective.js.fancytree = 2.20.0.0
 collective.js.iframeresizer = 0.3
 collective.iconifieddocumentactions = 1.3.2
@@ -25,9 +25,9 @@ communesplone.layout = 4.3.8.1
 ftw.labels = 1.2.1
 imio.annex = 1.9
 imio.actionspanel = 1.34
-imio.dashboard = 1.5
+imio.dashboard = 1.6
 imio.migrator = 1.6
-imio.helpers = 0.11
+imio.helpers = 0.12
 imio.history = 1.17
 imio.pm.locales = 4.1b6
 imio.prettylink = 1.10
@@ -42,7 +42,7 @@ simplejson = 3.13.2
 collective.dms.scanbehavior = 1.1
 collective.elephantvocabulary = 0.2.5
 collective.fontawesome = 1.0.5
-collective.iconifiedcategory = 0.30
+collective.iconifiedcategory = 0.31
 collective.z3cform.select2 = 1.4.0
 collective.js.tooltipster = 1.2
 icalendar = 3.11
@@ -55,7 +55,7 @@ z3c.json = 0.5.5
 #Required by:
 #imio.dashboard
 Products.ZCatalog = 3.1
-collective.eeafaceted.batchactions = 0.4.1
+collective.eeafaceted.batchactions = 0.6
 
 #Required by:
 #collective.eeafaceted.z3ctable
