Updated versions for new eea faceted 10 and collective.contact

--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -12,30 +12,43 @@ natsort = 5.3.0
 collective.behavior.talcondition = 0.7
 collective.ckeditor = 4.7.2
 collective.compoundcriterion = 0.3
+collective.contact.core = 1.18
+collective.contact.plonegroup = 1.8
+collective.contact.widget = 1.10
 collective.documentgenerator = 3.1
-collective.eeafaceted.collectionwidget = 0.9
-collective.eeafaceted.z3ctable = 1.0.3
+collective.eeafaceted.collectionwidget = 1.1 
+collective.eeafaceted.dashboard = 0.1
+collective.eeafaceted.z3ctable = 2.0
 collective.fingerpointing = 1.7
 collective.js.fancytree = 2.20.0.0
 collective.js.iframeresizer = 0.3
+collective.js.tablednd = 0.1
 collective.iconifieddocumentactions = 1.3.2
 collective.messagesviewlet = 0.12
 collective.usernamelogger = 1.4
+collective.z3cform.select2 = 2.0.0
 communesplone.layout = 4.3.8.1
+ecreall.helpers.upgrade = 1.4
 ftw.labels = 1.2.1
-imio.annex = 1.9
+imio.annex = 2.0
 imio.actionspanel = 1.35
-imio.dashboard = 1.7
+imio.dashboard = 2.0
 imio.migrator = 1.6
 imio.helpers = 0.12
 imio.history = 1.17
 imio.pm.locales = 4.1b7
 imio.prettylink = 1.10
+imio.pyutils = 0.9
 plone.app.versioningbehavior = 1.3.1
+plone.formwidget.masterselect = 1.6
 plonetheme.imioapps = 2.0.17
 Products.CPUtils = 1.13
 Products.PasswordStrength = 0.4
+python-dateutil = 2.7.3
 simplejson = 3.13.2
+vobject = 0.9.5
+z3c.unconfigure = 1.1
+zope.configuration = 3.8.1
 
 #Required by:
 #imio.annex
@@ -43,7 +56,6 @@ collective.dms.scanbehavior = 1.1
 collective.elephantvocabulary = 0.2.5
 collective.fontawesome = 1.0.5
 collective.iconifiedcategory = 0.32
-collective.z3cform.select2 = 1.4.0
 collective.js.tooltipster = 1.2
 icalendar = 3.11
 plone.event = 1.3.2
@@ -55,7 +67,7 @@ z3c.json = 0.5.5
 #Required by:
 #imio.dashboard
 Products.ZCatalog = 3.1
-collective.eeafaceted.batchactions = 0.6
+collective.eeafaceted.batchactions = 1.0
 
 #Required by:
 #collective.eeafaceted.z3ctable
@@ -63,16 +75,16 @@ z3c.table = 2.0.1
 
 #Required by:
 #collective.documentgenerator
-collective.excelexport = 1.2
+collective.excelexport = 1.7
 phonenumbers = 8.8.3
 xlwt = 1.3.0
 future = 0.16.0
 
 #Required by:
 #collective.eeafaceted.collectionwidget
-eea.facetednavigation = 9.8
-eea.jquery = 9.3
-eea.faceted.vocabularies = 5.3
+eea.facetednavigation = 11.1
+eea.jquery = 10.6 
+eea.faceted.vocabularies = 6.6
 
 plone.recipe.distros = 1.5
 collective.recipe.template = 1.11
