--- a/dev.cfg
+++ b/dev.cfg
@@ -66,8 +66,8 @@ environment = testenv
 [testenv]
 zope_i18n_compile_mo_files = true
 ENV = dev
-OO_PORT ${port:oo-port}
-PYTHON_UNO ${port:python-uno}
+OO_PORT = ${port:oo-port}
+PYTHON_UNO = ${port:python-uno}
 
 # create bin/coverage commant
 [coverage]
