--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -8,12 +8,9 @@ profilehooks = 1.8.1
 Babel = 2.1.1
 babel = 2.1.1
 coverage = 4.0.3
+
+# robot, these versions works with Chrome 
 Pygments = 2.0.2
-
-
-[versions]
-Pygments = 2.0.2
-
 plone.app.robotframework = 1.0.2
 robotframework = 3.0.2
 robotframework-debuglibrary = 0.8
@@ -21,7 +18,6 @@ robotframework-selenium2library = 1.8.0
 robotframework-selenium2screenshots = 0.7.2
 robotsuite = 2.0.0
 selenium = 3.3.0
-sphinxcontrib-robotframework = 0.6.1
 
 collective.profiler = 0.3
 
