Moved common packages (jenkins/normal build) to versions-base.cfg

--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -159,3 +159,9 @@ zodbupdate = 0.5
 zc.lockfile = 1.2.1
 file-read-backwards = 1.2.2
 
+# Required by:
+# jshint
+gp.recipe.node = 6.2.2.1
+python-archive = 0.2
+zc.recipe.cmmi = 2.0.0
+
