--- a/zeo.cfg
+++ b/zeo.cfg
@@ -57,7 +57,7 @@ zope-conf-additional +=
   </clock-server>
 
 zcml-additional =
-    <include package="plone.app.async" file="single_db_instance.zcml" />
+    <include package="plone.app.async" file="multi_db_instance.zcml" />
 environment-vars =
     ZC_ASYNC_UUID ${buildout:directory}/var/instance-uuid.txt
     zope_i18n_compile_mo_files true
@@ -200,7 +200,7 @@ debug-mode = on
 verbose-security = on
 zope-conf-additional =
 zcml-additional =
-    <include package="plone.app.async" file="single_db_worker.zcml" />
+    <include package="plone.app.async" file="multi_db_worker.zcml" />
 environment-vars =
     ZC_ASYNC_UUID ${buildout:directory}/var/async-uuid.txt
 zope-conf-additional =
