--- a/zeo.cfg
+++ b/zeo.cfg
@@ -32,6 +32,7 @@ zeo-conf-additional =
   %define FILESTORAGE ${buildout:directory}/var/filestorage
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zeo_add.conf
+  %include ${buildout:directory}/zeo_async.conf
 
 [instance1]
 recipe = plone.recipe.zope2instance
@@ -49,6 +50,7 @@ zope-conf-additional +=
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
+  %include ${buildout:directory}/zope_add_async.conf 
   <clock-server>
       method /${port:plone-path}/@@cron-tick
       period 3600
