Load zope-conf:additional in instance-async

--- a/zeo.cfg
+++ b/zeo.cfg
@@ -214,3 +214,5 @@ zope-conf-additional =
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
   %include ${buildout:directory}/zope_add_zeo.conf
   ${zope-conf:zamqp}
+  ${zope-conf:additional}
+
