Define zope-conf:additional

--- a/zeo.cfg
+++ b/zeo.cfg
@@ -34,6 +34,16 @@ zeo-conf-additional =
   %include ${buildout:directory}/zeo_add.conf
   %include ${buildout:directory}/zeo_async.conf
 
+[zope-conf]
+additional =
+  extensions ${buildout:directory}/Extensions
+  %define ZEOADDRESS ${zeoserver:zeo-address}
+  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
+  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
+  %include ${buildout:directory}/zope_add_zeo.conf
+  %include ${buildout:directory}/zope_add_async.conf
+  ${zope-conf:zamqp}
+
 [instance1]
 recipe = plone.recipe.zope2instance
 zeo-client = true
@@ -209,10 +219,5 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance-async-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
   ${zope-conf:additional}
 
