Removed extensions var (Extensions), use zope-conf:additional for every instances

--- a/zeo.cfg
+++ b/zeo.cfg
@@ -36,7 +36,6 @@ zeo-conf-additional =
 
 [zope-conf]
 additional =
-  extensions ${buildout:directory}/Extensions
   %define ZEOADDRESS ${zeoserver:zeo-address}
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
@@ -56,11 +55,7 @@ zope-conf-additional +=
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance1-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  %include ${buildout:directory}/zope_add_async.conf 
+  ${zope-conf:additional}
   <clock-server>
       method /${port:plone-path}/@@cron-tick
       period 3600
@@ -99,11 +94,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance2-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance3]
 <= instance1
@@ -112,11 +103,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance3-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance4]
 <= instance1
@@ -125,11 +112,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance4-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance5]
 <= instance1
@@ -138,11 +121,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance5-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance6]
 <= instance1
@@ -151,11 +130,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance6-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance7]
 <= instance1
@@ -164,11 +139,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance7-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance8]
 <= instance1
@@ -177,11 +148,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance8-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 
 [instance-debug]
 <= instance1
@@ -192,11 +159,7 @@ zope-conf-additional =
   <product-config five.z2monitor>
      bind 0.0.0.0:${port:instance-debug-monitor}
   </product-config>
-  %define ZEOADDRESS ${zeoserver:zeo-address}
-  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
-  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-  %include ${buildout:directory}/zope_add_zeo.conf
-  ${zope-conf:zamqp}
+  ${zope-conf:additional}
 eggs =
     ${instance1:eggs}
     ${debug:eggs}
