Added PUBLIC_URL env var

--- a/base.cfg
+++ b/base.cfg
@@ -91,6 +91,7 @@ environment-vars =
   zope_i18n_compile_mo_files true
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
+  PUBLIC_URL ${port:public-url}
 
 # If you want Zope to know about any additional eggs, list them here.
 # This should include any development eggs you listed in develop-eggs above,
