--- a/port.cfg
+++ b/port.cfg
@@ -30,3 +30,4 @@ oo-port = 2002
 python-uno = /usr/bin/python3
 zodb-cache-size = 100000
 zeo-client-cache-size = 1000MB
+public-url = http://localhost:8081/Plone
