--- a/zeo.cfg
+++ b/zeo.cfg
@@ -65,7 +65,7 @@ zope-conf-additional +=
 
 zcml-additional =
     <include package="plone.app.async" file="multi_db_instance.zcml" />
-environment-vars =
+environment-vars +=
     ZC_ASYNC_UUID ${buildout:directory}/var/instance-uuid.txt
     zope_i18n_compile_mo_files true
 eggs +=
