--- a/sources.cfg
+++ b/sources.cfg
@@ -13,6 +13,6 @@ zopesvn = svn://svn.zope.org/repos/main/
 appy = svn http://svn.communesplone.org/svn/communesplone/appy/trunk
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/tags/433
 imio.pm.locales = git git@github.com:IMIO/imio.pm.locales.git
-Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/tags/4.0
+Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/tags/4.1b15
 imio.zamqp.core = git git@github.com:IMIO/imio.zamqp.core.git
 imio.zamqp.pm = git git@github.com:IMIO/imio.zamqp.pm.git
