Updated default cluster name

--- a/port.cfg
+++ b/port.cfg
@@ -25,7 +25,7 @@ instance7-monitor = 8187
 instance8-monitor = 8188
 admin-password = admin
 plone-path = Plone
-cluster = pm40
+cluster = pm_pm41
 oo-port = 2002
 python-uno = /usr/bin/python3
 zodb-cache-size = 100000
