Removed zope-conf:amqp from zeo.cfg

--- a/amqp.cfg
+++ b/amqp.cfg
@@ -37,3 +37,4 @@ zope-conf-additional =
   %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
   %include ${buildout:directory}/zope_add_zeo.conf
   ${zope-conf:amqp}
+  ${zope-conf:zamqp}
