--- a/dev.cfg
+++ b/dev.cfg
@@ -18,7 +18,7 @@ auto-checkout +=
 always-accept-server-certificate = true
 
 [sources]
-imio.pm.locales = git git@github.com:IMIO/imio.pm.locales.git
+imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps pushurl=${remotes:imio_push}/plonetheme.imioapps
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/trunk
 
