--- a/sources.cfg
+++ b/sources.cfg
@@ -12,7 +12,8 @@ zopesvn = svn://svn.zope.org/repos/main/
 [sources]
 appy = svn http://svn.communesplone.org/svn/communesplone/appy/trunk
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/tags/433
-imio.pm.locales = git git@github.com:IMIO/imio.pm.locales.git
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/tags/4.1b15
-imio.zamqp.core = git git@github.com:IMIO/imio.zamqp.core.git
-imio.zamqp.pm = git git@github.com:IMIO/imio.zamqp.pm.git
+
+imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
+imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
+imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
