Make eggs available in zeoserver

--- a/zeo.cfg
+++ b/zeo.cfg
@@ -24,6 +24,7 @@ recipe = isotoma.recipe.facts
 [zeoserver]
 recipe = plone.recipe.zeoserver
 zeo-address = ${port:zeo}
+eggs = ${instance1:eggs}
 #effective-user = ${instance1:effective-user}
 pack-days = 7
 pack-keep-old = false
