Migrate SVN to GIT
Change sources config to use git instead of svn. This commit has been automated using a script.

--- a/dev.cfg
+++ b/dev.cfg
@@ -20,7 +20,7 @@ always-accept-server-certificate = true
 [sources]
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps pushurl=${remotes:imio_push}/plonetheme.imioapps
-Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/trunk
+Products.PloneMeeting = git https://github.com/IMIO/Products.PloneMeeting.git
 
 [instance1]
 #use the instance1 eggs to extends the base eggs defined in [buildout]
