--- a/sources.cfg
+++ b/sources.cfg
@@ -10,9 +10,8 @@ zopefoundation_push = git@github.com:zopefoundation
 zopesvn = svn://svn.zope.org/repos/main/
 
 [sources]
-appy = svn http://svn.communesplone.org/svn/communesplone/appy/trunk
-communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/tags/433
-Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/tags/4.1b15
+communesplone.layout = git https://github.com/IMIO/communesplone.layout.git rev=433
+Products.PloneMeeting = git https://github.com/IMIO/Products.PloneMeeting.git rev=4.1b15
 
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
