--- a/ws-dev.cfg
+++ b/ws-dev.cfg
@@ -21,8 +21,8 @@ zcml +=
     imio.pm.wsclient
 
 [sources]
-imio.pm.ws = svn http://svn.communesplone.org/svn/communesplone/imio.pm.ws/trunk
-imio.pm.wsclient = svn http://svn.communesplone.org/svn/communesplone/imio.pm.wsclient/trunk
+imio.pm.ws = git https://github.com/IMIO/imio.pm.ws.git
+imio.pm.wsclient = git https://github.com/IMIO/imio.pm.wsclient.git
 
 [testws]
 <= test
