Configure unique buildout, added communes config

--- a/base.cfg
+++ b/base.cfg
@@ -6,17 +6,26 @@ extensions =
 allow-picked-versions = false
 
 parts =
-    productdistros
     omelette
-    instance1
-    zopepy
     repozo
+    facts
+    zeoserver
+    instance1
+    instance2
+    instance3
+    instance4
+    instance5
+    instance6
+    instance7
+    instance8
+    instance-debug
+    instance-async
 
 # If you want to get the last versions of eggs, you have to comment the line "versions-prod.cfg"
 extends =
     https://dist.plone.org/release/4.3.18/versions.cfg
     port.cfg
-    versions-base.cfg
+    versions.cfg
     sources.cfg
 
 versions=versions
@@ -25,9 +34,6 @@ versions=versions
 # of Plone packages.
 find-links =
     http://twistedmatrix.com/Releases/Twisted/8.2/Twisted-8.2.0.tar.bz2
-
-auto-checkout =
-    Products.PloneMeeting
 
 always-checkout = force
 
@@ -47,44 +53,74 @@ eggs =
 # e.g.: develop = src/my.package
 develop =
 
-# Use this section to download additional old-style products.
-# List any number of URLs for product tarballs under URLs (separate
-# with whitespace, or break over several lines, with subsequent lines
-# indented). If any archives contain several products inside a top-level
-# directory, list the archive file name (i.e. the last part of the URL,
-# normally with a .tar.gz suffix or similar) under 'nested-packages'.
-# If any archives extract to a product directory with a version suffix, list
-# the archive name under 'version-suffix-packages'.
+[facts]
+recipe = isotoma.recipe.facts
 
-[productdistros]
-recipe = plone.recipe.distros
-urls =
-nested-packages =
-version-suffix-packages =
-
-[omelette]
-recipe = collective.recipe.omelette
+[zeoserver]
+recipe = plone.recipe.zeoserver
+zeo-address = ${port:zeo}
 eggs = ${instance1:eggs}
-products = ${instance1:products}
+#effective-user = ${instance1:effective-user}
+pack-days = 7
+pack-keep-old = false
+monitor-address = ${port:zeo-monitor}
+zeo-conf-additional =
+  %define FILESTORAGE ${buildout:directory}/var/filestorage
+  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
+  %include ${buildout:directory}/zeo_add.conf
+  %include ${buildout:directory}/zeo_async.conf
+
+[zope-conf]
+additional =
+  %define ZEOADDRESS ${zeoserver:zeo-address}
+  %define ZEOINSTANCE ${buildout:directory}/parts/zeoserver/var
+  %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
+  %include ${buildout:directory}/zope_add_zeo.conf
+  %include ${buildout:directory}/zope_add_async.conf
 
 [instance1]
-recipe = plone.recipe.zope2instance
 #effective-user =
 user = admin:${port:admin-password}
 http-address = ${port:instance1-http}
 zserver-threads = 4
 debug-mode = off
 verbose-security = off
+recipe = plone.recipe.zope2instance
+zeo-client = true
+zeo-address = ${zeoserver:zeo-address}
+zodb-cache-size = ${port:zodb-cache-size}
+zeo-client-cache-size = ${port:zeo-client-cache-size}
+
+shared-blob = on
 zope-conf-additional =
-    %define FILESTORAGE ${buildout:directory}/var/filestorage
-    %define BLOBSTORAGE ${buildout:directory}/var/blobstorage
-    %include ${buildout:directory}/zope_add.conf
-    ${zope-conf:zamqp}
-#    <product-config collective.fingerpointing>
-#        audit-log ${buildout:directory}/var/log/audit.log
-#        audit-log-max-size 10240
-#        audit-log-old-files 30
-#    </product-config>
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance1-monitor}
+  </product-config>
+  ${zope-conf:additional}
+  <clock-server>
+      method /${port:plone-path}/@@cron-tick
+      period 3600
+      user admin
+      password ${port:admin-password}
+  </clock-server>
+
+zcml-additional =
+    <include package="plone.app.async" file="multi_db_instance.zcml" />
+environment-vars =
+    ZC_ASYNC_UUID ${buildout:directory}/var/instance-uuid.txt
+
+event-log-custom =
+    <syslog>
+        address logs.imio.be:5544
+        facility local3
+        format %(asctime)s ${facts:hostname} zope[%(process)s]: ${port:cluster} ${:_buildout_section_name_} [%(levelname)s] %(name)s | %(message)s
+        dateformat %b %d %H:%M:%S
+        level info
+    </syslog>
+    <logfile>
+        path ${buildout:directory}/var/log/${:_buildout_section_name_}.log
+        level INFO
+    </logfile>
 
 environment-vars =
   PYTHON_EGG_CACHE ${buildout:directory}/python-eggs
@@ -93,11 +129,10 @@ environment-vars =
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
 
-# If you want Zope to know about any additional eggs, list them here.
-# This should include any development eggs you listed in develop-eggs above,
-# e.g. eggs = ${buildout:eggs} my.package
 eggs =
     ${buildout:eggs}
+    plone.app.async
+    collective.monitor
     Products.DocFinderTab
     Products.PloneMeeting
     five.z2monitor
@@ -114,10 +149,114 @@ zcml =
     five.z2monitor
     Products.ZNagios-zcmonitor
     zc.z3monitor
+    collective.monitor
 
-products =
-    ${buildout:directory}/products
-    ${productdistros:location}
+[instance2]
+<= instance1
+http-address = ${port:instance2-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance2-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance3]
+<= instance1
+http-address = ${port:instance3-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance3-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance4]
+<= instance1
+http-address = ${port:instance4-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance4-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance5]
+<= instance1
+http-address = ${port:instance5-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance5-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance6]
+<= instance1
+http-address = ${port:instance6-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance6-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance7]
+<= instance1
+http-address = ${port:instance7-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance7-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance8]
+<= instance1
+http-address = ${port:instance8-http}
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance8-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+[instance-debug]
+<= instance1
+http-address = ${port:instance-debug-http}
+debug-mode = on
+verbose-security = on
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance-debug-monitor}
+  </product-config>
+  ${zope-conf:additional}
+eggs =
+    ${instance1:eggs}
+    ${debug:eggs}
+zcml =
+    ${instance1:zcml}
+    ${debug:zcml}
+
+[instance-async]
+<= instance1
+http-address = ${port:instance-async-http}
+zserver-threads = 4
+debug-mode = on
+verbose-security = on
+zope-conf-additional =
+zcml-additional =
+    <include package="plone.app.async" file="multi_db_worker.zcml" />
+environment-vars =
+    ZC_ASYNC_UUID ${buildout:directory}/var/async-uuid.txt
+zope-conf-additional =
+  <product-config five.z2monitor>
+     bind 0.0.0.0:${port:instance-async-monitor}
+  </product-config>
+  ${zope-conf:additional}
+
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance1:eggs}
+
+# amqp/zamqp is empty by default. If amqp.cfg is included, it's overrided
+[zope-conf]
+amqp =
+zamqp =
 
 [debug]
 eggs =
@@ -125,12 +264,6 @@ eggs =
     iw.debug
 zcml =
     iw.debug
-
-[zopepy]
-recipe = zc.recipe.egg
-eggs = ${instance1:eggs}
-interpreter = zopepy
-scripts = zopepy
 
 [repozo]
 recipe = zc.recipe.egg
