--- a/dev.cfg
+++ b/dev.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends =
-    zeo.cfg
+    base.cfg
     versions-dev.cfg
 
 parts +=
@@ -10,17 +10,13 @@ parts +=
     robot
     code-analysis
 
-auto-checkout +=
+auto-checkout =
+    Products.PloneMeeting
     imio.pm.locales
     plonetheme.imioapps
 
 # do mr.developer not fail with invalid subversion https certificates
 always-accept-server-certificate = true
-
-[sources]
-imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
-plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps pushurl=${remotes:imio_push}/plonetheme.imioapps
-Products.PloneMeeting = git https://github.com/IMIO/Products.PloneMeeting.git
 
 [instance1]
 #use the instance1 eggs to extends the base eggs defined in [buildout]
@@ -41,8 +37,6 @@ eggs +=
 
 zcml +=
     iw.debug
-
-zope-conf-additional +=
 
 # create bin/test command
 [test]
