--- a/sources.cfg
+++ b/sources.cfg
@@ -3,15 +3,16 @@ plone = git://github.com/plone
 plone_push = git@github.com:plone
 collective = git://github.com/collective
 collective_push = git@github.com:collective
-imio = git://github.com/IMIO
+imio = https://github.com/IMIO
 imio_push = git@github.com:IMIO
 zopefoundation = git://github.com/zopefoundation
 zopefoundation_push = git@github.com:zopefoundation
 zopesvn = svn://svn.zope.org/repos/main/
 
 [sources]
-communesplone.layout = git https://github.com/IMIO/communesplone.layout.git rev=433
-Products.PloneMeeting = git https://github.com/IMIO/Products.PloneMeeting.git rev=4.1b15
+communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${remotes:imio_push}/communesplone.layout.git
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
+plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
