--- a/versions.cfg
+++ b/versions.cfg
@@ -2,7 +2,7 @@
 zc.buildout = 2.10.0
 setuptools = 38.2.4
 Products.DocFinderTab = 1.0.5
-mr.developer = 1.34
+mr.developer = 1.38
 
 # Required by:
 # Products.PloneMeeting
@@ -165,3 +165,70 @@ gp.recipe.node = 6.2.2.1
 python-archive = 0.2
 zc.recipe.cmmi = 2.0.0
 
+#Required by:
+#imio.pm.ws 1.0
+ZSI = 2.1a2-imio1
+
+#Required by:
+#imio.pm.ws 1.0
+z3c.soap = 0.5.5
+
+#Required by:
+#imio.pm.ws 1.0
+archetypes.schemaextender = 2.1.2
+
+#Required by:
+#imio.pm.ws 1.0
+BeautifulSoup = 3.2.1
+
+#Required by:
+#imio.pm.ws 1.0
+python-magic = 0.4.6
+
+#Required by:
+#SOAPpy 0.12.5
+wstools = 0.4.6
+
+#Required by:
+#SOAPpy 0.12.5
+fpconst = 0.7.2
+
+#Optional SOAP clients if activated in communesplone.ws4plonemeeting/setup.py
+SOAPpy = 0.12.5
+suds-jurko = 0.6
+
+#Required by:
+#imio.pm.wsclient 1.1
+collective.z3cform.datagridfield = 1.2
+
+imio.pm.ws = 2.6
+imio.pm.wsclient = 1.12
+
+plone.app.async = 1.6
+#Required by:
+#plone.app.async 1.6
+zc.z3monitor = 0.8.0
+zc.monitor = 0.3.1
+zc.async = 1.5.4
+mock = 1.0.1
+zc.ngi = 2.0.1
+zope.bforest = 1.2
+Twisted = 8.2.0
+zc.twist = 1.3.1
+zc.dict = 1.2.1
+zc.queue = 1.3
+uuid = 1.30
+isotoma.recipe.facts = 0.0.8
+collective.monitor = 0.2.4
+
+#Required by:
+#collective.monitor 0.2.5
+Products.ZNagios = 0.7.3
+ztfy.monitor = 0.1
+zc.monitorlogstats = 0.1.0
+zc.monitorcache = 0.1.0
+munin.zope = 2.1
+psutil = 3.1.1
+threadframe = 0.2
+Products.ZServerViews = 0.2.0
+gocept.munin = 0.1
