Ignore 'too complex' PEP8 warnings

--- a/dev.cfg
+++ b/dev.cfg
@@ -85,4 +85,4 @@ initialization =
 recipe = plone.recipe.codeanalysis
 directory =
         ${buildout:directory}/src/Products.PloneMeeting/src
-flake8-ignore = E123,E124,E501,E126,E127,E128,W391
+flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
